Some minor changes  - Fix unsupported value on box-sizing  - Reordering width and height classes on generals / Deleted z-index loop block  - Added class to remove margin from p element
 Changes to be committed:
	modified:   util/helpers/box.styl
	modified:   util/helpers/generals.styl
	modified:   util/helpers/text.styl

--- a/util/helpers/box.styl
+++ b/util/helpers/box.styl
@@ -8,4 +8,4 @@
 	box-sizing padding-box
 	
 .bsc
-	box-sizing content
+	box-sizing content-box
