--- a/util/helpers/text.styl
+++ b/util/helpers/text.styl
@@ -22,3 +22,6 @@
 for x in 1..9
 	.fw{x*100}
 		font-weight (x*100)
+
+p.paragraph-reset
+	margin 0
